@@ -38,7 +38,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|Set
+name|Map
 import|;
 end_import
 begin_comment
@@ -415,9 +415,11 @@ parameter_list|,
 name|int
 name|maxNumSegments
 parameter_list|,
-name|Set
+name|Map
 argument_list|<
 name|SegmentInfo
+argument_list|,
+name|Boolean
 argument_list|>
 name|segmentsToOptimize
 parameter_list|)
@@ -481,7 +483,7 @@ if|if
 condition|(
 name|segmentsToOptimize
 operator|.
-name|contains
+name|containsKey
 argument_list|(
 name|info
 argument_list|)
