@@ -56,7 +56,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|Set
+name|Map
 import|;
 end_import
 begin_comment
@@ -650,9 +650,11 @@ parameter_list|,
 name|int
 name|maxNumSegments
 parameter_list|,
-name|Set
+name|Map
 argument_list|<
 name|SegmentInfo
+argument_list|,
+name|Boolean
 argument_list|>
 name|segmentsToOptimize
 parameter_list|)
@@ -677,6 +679,11 @@ name|SegmentInfo
 name|optimizeInfo
 init|=
 literal|null
+decl_stmt|;
+name|boolean
+name|segmentIsOriginal
+init|=
+literal|false
 decl_stmt|;
 for|for
 control|(
@@ -708,16 +715,28 @@ argument_list|(
 name|i
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
+specifier|final
+name|Boolean
+name|isOriginal
+init|=
 name|segmentsToOptimize
 operator|.
-name|contains
+name|get
 argument_list|(
 name|info
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|isOriginal
+operator|!=
+literal|null
 condition|)
 block|{
+name|segmentIsOriginal
+operator|=
+name|isOriginal
+expr_stmt|;
 name|numToOptimize
 operator|++
 expr_stmt|;
@@ -736,6 +755,9 @@ operator|(
 name|numToOptimize
 operator|!=
 literal|1
+operator|||
+operator|!
+name|segmentIsOriginal
 operator|||
 name|isOptimized
 argument_list|(
@@ -1392,9 +1414,11 @@ parameter_list|,
 name|int
 name|maxNumSegments
 parameter_list|,
-name|Set
+name|Map
 argument_list|<
 name|SegmentInfo
+argument_list|,
+name|Boolean
 argument_list|>
 name|segmentsToOptimize
 parameter_list|)
@@ -1488,10 +1512,12 @@ if|if
 condition|(
 name|segmentsToOptimize
 operator|.
-name|contains
+name|get
 argument_list|(
 name|info
 argument_list|)
+operator|!=
+literal|null
 condition|)
 block|{
 name|last
