@@ -51,15 +51,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|HashSet
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|List
 import|;
 end_import
@@ -69,7 +60,16 @@ name|java
 operator|.
 name|util
 operator|.
-name|Set
+name|Map
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashMap
 import|;
 end_import
 begin_comment
@@ -193,9 +193,11 @@ parameter_list|,
 name|int
 name|maxSegmentCount
 parameter_list|,
-name|Set
+name|Map
 argument_list|<
 name|SegmentInfo
+argument_list|,
+name|Boolean
 argument_list|>
 name|segmentsToOptimize
 parameter_list|)
@@ -206,16 +208,20 @@ name|IOException
 block|{
 comment|// first find all old segments
 specifier|final
-name|HashSet
+name|Map
 argument_list|<
 name|SegmentInfo
+argument_list|,
+name|Boolean
 argument_list|>
 name|oldSegments
 init|=
 operator|new
-name|HashSet
+name|HashMap
 argument_list|<
 name|SegmentInfo
+argument_list|,
+name|Boolean
 argument_list|>
 argument_list|()
 decl_stmt|;
@@ -228,14 +234,22 @@ range|:
 name|segmentInfos
 control|)
 block|{
-if|if
-condition|(
+specifier|final
+name|Boolean
+name|v
+init|=
 name|segmentsToOptimize
 operator|.
-name|contains
+name|get
 argument_list|(
 name|si
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|v
+operator|!=
+literal|null
 operator|&&
 name|shouldUpgradeSegment
 argument_list|(
@@ -245,9 +259,11 @@ condition|)
 block|{
 name|oldSegments
 operator|.
-name|add
+name|put
 argument_list|(
 name|si
+argument_list|,
+name|v
 argument_list|)
 expr_stmt|;
 block|}
@@ -309,15 +325,24 @@ operator|.
 name|merges
 control|)
 block|{
-name|oldSegments
-operator|.
-name|removeAll
-argument_list|(
+for|for
+control|(
+name|SegmentInfo
+name|info
+range|:
 name|om
 operator|.
 name|segments
+control|)
+block|{
+name|oldSegments
+operator|.
+name|remove
+argument_list|(
+name|info
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 if|if
@@ -378,7 +403,7 @@ if|if
 condition|(
 name|oldSegments
 operator|.
-name|contains
+name|containsKey
 argument_list|(
 name|si
 argument_list|)
