@@ -65,7 +65,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|Set
+name|Map
 import|;
 end_import
 begin_import
@@ -243,9 +243,11 @@ parameter_list|,
 name|int
 name|maxSegmentCount
 parameter_list|,
-name|Set
+name|Map
 argument_list|<
 name|SegmentInfo
+argument_list|,
+name|Boolean
 argument_list|>
 name|segmentsToOptimize
 parameter_list|)
@@ -280,7 +282,7 @@ if|if
 condition|(
 name|segmentsToOptimize
 operator|.
-name|contains
+name|containsKey
 argument_list|(
 name|info
 argument_list|)
@@ -455,7 +457,7 @@ block|{
 assert|assert
 name|segmentsToOptimize
 operator|.
-name|contains
+name|containsKey
 argument_list|(
 name|info
 argument_list|)
